<resources>

    <string name="app_name">FinalProject</string>

    <string name="add_HouseThermostat">add</string>
    <string name="edit_HouseThermostat">edit &amp; save</string>
    <string name="delete_HouseThermostat">delete</string>
    <string name="save_HouseThermostat">save as new</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sportMenu">Sport</string>
    <string name="foodMenu">Nutrition</string>
    <string name="houseMenu">Home</string>
    <string name="carMenu">Car</string>

    <!--Food Nutrition!-->
    <string name="foodName">Food Name</string>
    <string name="fd_calsName">Calories</string>
    <string name="fd_fatName">Fat</string>
    <string name="fd_CarboName">Carbohydrate</string>
    <string name="fd_saveText">Save Record</string>
    <string name="fd_Date">Record Date</string>
    <string name="fd_Time">Record Time</string>
    <string name="title_activity_food_tracker">FoodTracker</string>

    <string name="fd_title1">New Food</string>
    <string name="fd_title2">Food History</string>
    <string name="fd_title3">Summary</string>
    <string name="fd_aboutTitle">Food About</string>
    <string name="fd_dialogTitle">Help Info</string>
    <string name="fd_cancel">Cancel</string>
    <string name="fd_update">Update</string>
    <string name="fd_delete">Delete</string>
    <string name="title_activity_food_history_info">FoodHistoryInfo</string>

    <string name="fd_lastday">Last Day Information</string>
    <string name="fd_perday">Average Value Per Day</string>
    <string name="fd_notftitle">Food notification</string>
    <string name="fd_notfcontext"> You Can See Average Nutrition Per Day</string>
    <string name="fd_help">Version 1.0, by Liangliang.\nThere are three main functions in this activity, you can click icons on the top.</string>

    <string name="fd_namewarn">Please input a food name</string>
    <string name="fd_snack">Add New Food</string>
    <string name="fd_detail">Detail Information</string>


    <!--Activity Tracking!-->
    <string name="Activities">Activities</string>
    <string name="Activy_time">Time</string>
    <string name="Activy_comments">Comments</string>
    <string name="Activy_save">SAVE</string>
    <string name="Activy_delete">delete</string>
    <string name="Activy_edit">edit</string>

  
   <!--auto-->
    <string name="title_activity_automoblie_details">AutomoblieDetails</string>
    <string name="title_activity_automobile_details">AutomobileDetails</string>
    <string name="title_activity_automain">Automain</string>
    <string name="OK">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="Summary">Infomation</string>
    <string name="SumF">Last month Fuel:</string>
    <string name="SumP">Last month Price AVG:</string>
    <string name="Sumpermonth">Per month Fuel:</string>
    <string name="Fuel">Fuel:</string>
    <string name="Price">Price:</string>
    <string name="Kilo">Kilometers:</string>
    <string name="about">About</string>
    <string name="list">List</string>
    <string name="editbutton">Eidt</string>
    <string name="savebutton">Save</string>
    <string name="price">Price($): </string>
    <string name="fuelL">Fuel(L)：</string>
    <string name="KiloKM">Kiolmeter(Km): </string>
    <string name="showdate">Date: </string>


    <!--hometheomest-->

    <string name="HTdialogTitle"> Do you want to go back?</string>
    <string name="HTcustomDialogTitle"> This is a custom dialog. What version is this? </string>
    <string name="HTcustomLayout">New Message</string>
    <string name="HTok"> ok</string>
    <string name="HTcancel">cancel </string>
    <string name="HThelpItem">"By YanCheng, version 1.0, "
        + "the interface can be user to add, edit &amp; save, edit &amp; new, and delete items"</string>
    <string name="HTsettings">Settings</string>
    <string name="HThelp">Help</string>
    <string name="HTTemp"> Temp -> </string>
    <string name="HTselectItem">You selected item 1</string>
    <string name="HouseThermostat">House Thermostat</string>
    <string name="HTinstruction">Instruction</string>
    <string name="HTheader_text">Navigation Header</string>

    <string name="HTinstructionItem1">Author: YanCheng, Version: </string>
    <string name="HTinstructionItem2">. Instruction for use: the interface can be user to add, edit &amp; save, edit &amp; new, and delete items.</string>

    <string name="open_string">Open</string>
    <string name="close_string">Close</string>
    <string name="HTdeleteTitle">Do you want to delete?</string>
    <string name="HTSaveAsNew">The item will be saved as a new item.</string>
    <string name="HTEditAndSave">The item will be edited and then saved.</string>

    <string name= "HTWeekNull"> Week can not be null!</string>
    <string name= "HTTimeNull"> Time can not be null!</string>
    <string name= "HTTempNull"> Temp can not be null!</string>
    <string name= "HTAddSucc">  Added successful!</string>

    <string name= "HTWeek"> Date</string>

    <string name="time_HouseThermostat">Time</string>

    <string name= "week_prompt">  Week </string>

    <string-array name="week_arrays">
        <item></item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>

    </string-array>

</resources>
