<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item android:id="@+id/fd_action1"
        android:title="@string/fd_title1"
        android:icon="@drawable/newfood"
        android:orderInCategory="101"
        app:showAsAction="always" />

    <item android:id="@+id/fd_action2"
        android:title="@string/fd_title2"
        android:icon="@drawable/history"
        android:orderInCategory="102"
        app:showAsAction="always" />


    <item android:id="@+id/fd_action3"
        android:title="@string/fd_title3"
        android:icon="@drawable/dashboard"
        android:orderInCategory="103"
        app:showAsAction="always" />

    <item android:id="@+id/fd_acAbout"
        android:title="@string/fd_aboutTitle"
        android:orderInCategory="104"
        app:showAsAction="never" />
</menu>