<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.a29751.finalproject.Autoshowinfo">

    <TextView
        android:id="@+id/showP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        app:layout_constraintEnd_toStartOf="@+id/editP"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showF" />

    <EditText
        android:id="@+id/editF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/editP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/showF"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:text="@string/fuelL"
        app:layout_constraintEnd_toStartOf="@+id/editF"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/editK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editF" />

    <TextView
        android:id="@+id/showK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/KiloKM"
        app:layout_constraintBottom_toTopOf="@+id/showD"
        app:layout_constraintEnd_toStartOf="@+id/editK"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showP"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="279dp" />

    <TextView
        android:id="@+id/showD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showdate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <Button
        android:id="@+id/editBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editbutton" />

</LinearLayout>
