<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a29751.finalproject.AutoSummaryInfo">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="193dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="176dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="368dp"
        android:layout_height="315dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout">

        <TextView
            android:id="@+id/SumTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Summary"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/avgP"
                android:layout_width="94dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SumF"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/avgPnum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lastF"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SumP"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/lastFnum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/permonth"
                android:layout_width="98dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Sumpermonth"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/permonthNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
